syntax = "proto3";

package endpoint.v1;

option java_multiple_files = true;
option java_package = "com.ukonnra.springcqrsestest.endpoint.grpc.proto";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {
  }
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}
